# SpaTacS

./: .gitignore  CHANGES.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md  ROADMAP.md  SpaTacS.uproject  TODO.md  id.h  level.xml  main.cpp  settings.xml  vec.h
Config/: DefaultEditorUserSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: ComponentHealthWidget.uasset  Destroyer.uasset  Material.uasset  SingleShipHUD.uasset  destroyer.fbx  rocket.fbx  rocket.uasset  turret.fbx  turret.uasset
Content/Ammunition/: AP_55mm.uasset  BasicRocket.uasset  BasicShell.uasset  HE_55mm.uasset  Rocket_55mm.uasset
Content/Blueprints/: BP_PlayerPawn.uasset  BP_SpaTacSGameMode.uasset
Content/Effects/: Explosion.uasset
Content/Effects/Particles/: M_Radial_Gradient.uasset  M_Tracer.uasset  M_explosion_subUV.uasset  MuzzleFlash.uasset  P_Explosion.uasset  P_Thruster.uasset  P_Tracer.uasset  m_flare_01.uasset
Content/Levels/: TestLevel.umap  TestLevel_BuiltData.uasset
Content/Materials/: M_ShipMarker.uasset  M_TargetMarker.uasset
Content/Menus/: MainMenu.uasset  PauseMenu.uasset
Content/Meshes/: M_Destoryer_Hull.uasset  M_Destroyer_Engine.uasset  M_Destroyer_Glass.uasset  destroyer.uasset  destroyer0.uasset
Content/Ships/: Destroyer.uasset
Content/Sky/: BP_Sky_Sphere.uasset  M_SpaceSky.uasset
Source/: SpaTacS.Target.cs  SpaTacSEditor.Target.cs
Source/SpaTacS/: ShipComponentHealthWidget.cpp  ShipComponentHealthWidget.h  SpaTacS.Build.cs  SpaTacS.cpp  SpaTacS.h  SpaTacSGameModeBase.cpp  SpaTacSGameModeBase.h  SpaceMovementComponent.cpp  SpaceMovementComponent.h  StarShip.cpp  StarShip.h
Source/SpaTacS/PlayerPawn/: PlayerPawn.cpp  PlayerPawn.h  PlayerPawnController.cpp  PlayerPawnController.h  PlayerPawnMovement.cpp  PlayerPawnMovement.h
Source/SpaTacS/Projectiles/: BasicProjectile.cpp  BasicProjectile.h  Rocket.cpp  Rocket.h  Shell.cpp  Shell.h  W_ArmourPiercing.cpp  W_ArmourPiercing.h  W_HighExplosive.cpp  W_HighExplosive.h  Warhead.cpp  Warhead.h
Source/SpaTacS/ShipComponents/: CombustionEngineComponent.h  CombustionPowerPlant.cpp  CombustionPowerPlant.h  (+23 more)
UI/: AIPlayer.cpp  AIPlayer.h  AppState.h  ConsoleUI.cpp  ConsoleUI.h  IInputMode.cpp  IInputMode.h  IUI.h  IrrRAII.h  IrrlichtUI.cpp  IrrlichtUI.h  LevelLoader.cpp  LevelLoader.h  StateManager.cpp  StateManager.h  convert.cpp  convert.h
UI/cmd/: Attack.cpp  Attack.h  CommandManager.cpp  CommandManager.h  Commands.h  ICommand.h  Move.cpp  Move.h  SetMode.cpp  SetMode.h
UI/gfx/: GridNode.cpp  GridNode.h  HealthBar.cpp  HealthBar.h  LocationPlotter3D.cpp  LocationPlotter3D.h  MultiLineNode.cpp  MultiLineNode.h  ShieldFx.cpp  ShieldFx.h  ShipFx.cpp  ShipFx.h  ShipStatusUI.cpp  ShipStatusUI.h  ShipUI.h  ShotFx.cpp  ShotFx.h  WeaponStatusUI.cpp  WeaponStatusUI.h
UI/inputs/: ShipStatus.cpp  ShipStatus.h  UnitCommand.cpp  UnitCommand.h  UnitSelection.cpp  UnitSelection.h
UI/panels/: DamageReport.cpp  DamageReport.h  ShipStatus.cpp  ShipStatus.h  WeaponsPanel.cpp  WeaponsPanel.h
UI/states/: GameState.cpp  GameState.h  LevelSelection.cpp  LevelSelection.h  MainMenu.cpp  MainMenu.h  SettingsMenu.cpp  SettingsMenu.h
cmd/: Attack.cpp  Attack.h  CommandManager.cpp  CommandManager.h  Move.cpp  Move.h  SetMode.cpp  SetMode.h
core/: Damage.h  Entity.h  EntityManager.h  Game.cpp  Game.h  GameInterface.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  GameStateBase.cpp  GameStateBase.h  GameThread.cpp  GameThread.h  Projectile.cpp  Projectile.h  Simulation.cpp  Simulation.h  SimulationBase.cpp  SimulationBase.h  Starship.cpp  Starship.h  SubSystems.cpp  SubSystems.h  System.h  TypedGameInterface.h  any_vector.h
core/V2/: ComponentStorage.h  EntityHandle.h  EntityManager.h  EntityStorage.h  System.h  Translation.h  fwd.h  mp.h
core/components/: Engine.cpp  Engine.h  FuelTank.cpp  FuelTank.h  Hull.cpp  Hull.h  IComponent.cpp  IComponent.h  IWeapon.h  LifeSupport.cpp  LifeSupport.h  PowerPlant.cpp  PowerPlant.h  ProjectileWeapon.cpp  ProjectileWeapon.h  RayWeapon.cpp  RayWeapon.h  ShieldGenerator.cpp  ShieldGenerator.h
core/detail/: GameThread.cpp  GameThread.h
core/ecs/: ComponentStorage.h  EntityHandle.h  EntityManager.h  EntityStorage.h  MetaStorage.h  System.h  config.h  detail.h  fwd.h
core/meta/: find.h  types.h
data/: ammunition.xml  cruiser.xml  destroyer.xml
data/scenarios/: easy.xml  hard.xml  medium.xml
events/: Accelerate.cpp  Accelerate.h  Combat.cpp  Combat.h  IEvent.h  ShieldEvent.cpp  ShieldEvent.h  ShipEvent.cpp  ShipEvent.h  Spawn.cpp  Spawn.h
game/: AIPlayer.cpp  AIPlayer.h  Damage.cpp  Damage.h  GameObject.cpp  GameObject.h  GameSimulation.cpp  GameSimulation.h  GameState.cpp  GameState.h  LevelLoader.cpp  LevelLoader.h  ObjectID.h  Projectile.cpp  Projectile.h  Shield.cpp  Shield.h  Simulation.cpp  Simulation.h  Starship.cpp  Starship.h  State.cpp  State.h  SubSystems.cpp  SubSystems.h  components.cpp  components.h  systems.cpp  systems.h
game/components/: Engine.cpp  Engine.h  FuelTank.cpp  FuelTank.h  IComponent.cpp  IComponent.h  IWeapon.h  LifeSupport.cpp  LifeSupport.h  PowerPlant.cpp  PowerPlant.h  ProjectileWeapon.cpp  ProjectileWeapon.h  RayWeapon.cpp  RayWeapon.h  ShieldGenerator.cpp  ShieldGenerator.h  comps.h
game/entity/: common_comps.cpp  common_comps.h  components.cpp  components.h  entity.h  entity_comps.cpp  entity_comps.h  fwd.h
game/events/: Spawn.cpp  Spawn.h  commands.h  context.h  controls.cpp  controls.h  events.h  notifications.h
game/systems/: Ammunition.cpp  Ammunition.h  FuelTank.cpp  FuelTank.h  LifeSupport.cpp  LifeSupport.h  Power.cpp  Power.h  Propulsion.cpp  Propulsion.h  Shield.cpp  Shield.h  TankInfo.cpp  TankInfo.h  Timer.cpp  Timer.h  Weapon.cpp  Weapon.h  fwd.h  make_system.h
physics/: Events.cpp  Events.h  Fixture.cpp  Fixture.h  HitTests.cpp  HitTests.h  Object.cpp  Object.h  ObjectID.h  PhysicsWorld.cpp  PhysicsWorld.h  dimensions.h  parse_unit.cpp  parse_unit.h  units.h
test/: PhysicsWorld.cpp  collision_test.cpp  ecs_test.cpp  units_test.cpp  vec_test.cpp
test/core/: ecs_storage.cpp  ecs_test.cpp
(+33 files in other folders)
